--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv=Refresh content="0;url=/5.0.4/index.html"></head></html>
+<html><head><meta http-equiv=Refresh content="0;url=./5.0.4/index.html"></head></html>
