Fixed index for global url

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<html><head><meta http-equiv=Refresh content="0;url=./5.0.4/index.html"></head></html>
+<!-- Local Dev only html><head><meta http-equiv=Refresh content="0;url=./5.0.4/index.html"></head></html -->
+<html><head><meta http-equiv=Refresh content="0;url=https://rethinkrobotics.github.io/intera_sdk_docs/5.0.4/index.html"></head></html>
