One more time with the subfolder redirect

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!-- Local Dev only html><head><meta http-equiv=Refresh content="0;url=./5.0.4/index.html"></head></html -->
-<html><head><meta http-equiv=Refresh content="0;url=https://rethinkrobotics.github.io/intera_sdk_docs/5.0.4/index.html"></head></html>
+<meta http-equiv="refresh" content="0; url=https://rethinkrobotics.github.io/intera_sdk_docs/5.0.4/index.html" />
